tup/parse/testdata/error/output/expressions.tup
# unclosed tuple literal
error: expecting ")", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:10

# unclosed array literal
error: expecting "]", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:13

# binary expression missing right operand
error: expecting "expression", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:8

# unclosed block
error: expecting "}", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:3:6

# if expression missing condition
error: expecting "expression", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:7

# if expression missing then branch
error: expecting "block", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:12

# if expression with block condition missing then branch
error: expecting "block", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:13

# function call missing closing paren
error: expecting ")", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:13

# labeled tuple literal missing colon
error: expecting "expression", got "("
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:5

# labeled tuple literal trailing unlabeled member
error: expecting ")", got "c"
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:18

# member access missing field name
error: expecting "field name", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:10

# tuple update with unlabeled tuple
error: expecting "field name", got "1"
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:11

# import with identifier instead of string
error: expecting "string literal", got "io"
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:12

# meta expression missing labeled arguments
error: expecting "labeled argument", got ")"
--> /home/user/tuppence/tup/parse/testdata/error/input/expressions.tup:1:7
